--- a/labs/Overview.html
+++ b/labs/Overview.html
@@ -9,19 +9,43 @@
 <body style="background: white; font-family:Helvetica,Arial;">
   <p><!--  DO NOT MODIFY ANYTHING ABOVE THIS LINE -->
     <span style="font-weight: bold; text-decoration: underline;">Overview:</span><br><br>
-    The AppDynamics Fundamentals reservation based Lab provides a developer with an environment to deploy several AppDynamic's agents along with a sample application to understand how AppDynamics provides end-to-end application monitoring and allows you to quickly resolve performance issues before they become business problems.
+    The AppDynamics Fundamentals reservation based Lab provides you with an environment to deploy several AppDynamic's agents along with a sample application to understand how AppDynamics provides end-to-end application monitoring and allows you to quickly resolve performance issues before they become business problems.
   <br> <br>
   <span style="text-decoration: underline; font-weight: bold;">Lab Information:</span><br><br>
   The AppDynamics Fundamentals Lab environment consists of two CentOS Linux based VM's. The first VM hosts the AppDynamics Controller and will be referred to from this point on as the "Controller VM". The second VM hosts the Supercar-Trader sample application used in the Lab. The second VM will be the host where you will install the AppDynamics agents and will be referred to from this point on as the "Application VM". 
   
 <br><br/>
 
-A developer can reserve this lab and remotely access to install the AppDynamics agents with the sample application.  After installing the AppDynamics agents with the sample application, you will access the AppDynamics Controller to monitor the application performance and troubleshoot issues in the application that are impacting end user experience.
+You can reserve this lab and remotely access to install the AppDynamics agents with the sample application.  After installing the AppDynamics agents with the sample application, you will access the AppDynamics Controller to monitor the application performance and troubleshoot issues in the application that are impacting end user experience.
 
 <br><br/>
 
 The topology diagram for the Lab environment can be found <a href="./appd-architecture.pdf" target="_blank">here</a>.
   <br><br/>
+
+
+  <span style="text-decoration: underline; font-weight: bold;">Important Note:</span>
+
+  <ul>
+    <li>
+You will need to complete the <a href="https://developer.cisco.com/learning/lab/fnd-01-appd-apm-java/step/1" rel="nofollow">Java Application Monitoring Fundamentals</a> lab before you start the other labs in the learning track.  
+    </li>
+    <li>
+You <span style="font-weight: bold;">must use the same two VM instances for each lab</span> within the learning track as they build on one another.
+    </li>
+    <li>
+Ensure that you increase your reservation duration when starting your sandbox reservation so you have adequate time to complete all of the labs.
+    </li>
+    <li>
+You can increase your reservation duration when starting your sandbox reservation as described in <span style="font-weight: bold;">step 4</span> <a href="https://developer.cisco.com/docs/sandbox/#!first-reservation-guide/reservation-hello-world" rel="nofollow">here</a>.
+    </li>
+    <li>
+If your reservation expires before you complete the labs, all your changes will be lost.  You can request a reservation extension before it expires using the sandbox support forum found <a href="https://communities.cisco.com/community/developer/sandbox" rel="nofollow">here</a>.
+    </li>
+  </ul>
+
+<p><p/>
+
 
   <span style="text-decoration: underline; font-weight: bold;">Access Details:<br>
   </span><br>
@@ -60,7 +84,7 @@ The topology diagram for the Lab environment can be found <a href="./appd-archit
 
   <span style="text-decoration: underline; font-weight: bold;">Learning Track Labs:<br>
     </span>
-  <p>The <a href="https://developer.cisco.com/learning/tracks/appd-fundamentals" rel="nofollow">AppDynamics Fundamentals</a> learning track consists of the following Labs.</p>
+  <p>The <a href="https://developer.cisco.com/learning/modules/appdynamics-fundamentals" rel="nofollow">AppDynamics Fundamentals</a> learning track consists of the following Labs.</p>
   <ul>
     <li>
         <a href="https://developer.cisco.com/learning/lab/fnd-01-appd-apm-java/step/1" rel="nofollow">Java Application Monitoring Fundamentals</a>
@@ -76,7 +100,8 @@ The topology diagram for the Lab environment can be found <a href="./appd-archit
     </li>
   </ul>
 
-  <p>You will need to complete the <a href="https://developer.cisco.com/learning/lab/fnd-01-appd-apm-java/step/1" rel="nofollow">Java Application Monitoring Fundamentals</a> lab before you start the other labs in the learning track.  You will need to use the same two VM instances for each lab within the learning track as they build on one another.</p>
+
+
 
   <span style="text-decoration: underline; font-weight: bold;">Additional Information:<br>
   </span>
